test/corpus/literals.txt
================================================================================
Identifier capitalized
================================================================================
test

    SBWatch2
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (identifier)))

================================================================================
Identifier
================================================================================
test

    abc123
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (identifier)))

================================================================================
String
================================================================================
test

    'abc def'
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (string)))

================================================================================
Escaped String
================================================================================
test

    'abc '' abc '' def'
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (string)))

================================================================================
Empty String
================================================================================
test

    ''
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (string)))

================================================================================
Number
================================================================================
test

    123
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (number)))

================================================================================
Number with Base
================================================================================
test

    12r123
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (number)))

================================================================================
Number with Decimal
================================================================================
test

    2.3.
    2.4
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (number))
  (statement
    (number)))

================================================================================
Symbol
================================================================================
test

    #abc123
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (symbol)))

================================================================================
Binary Symbol
================================================================================
test

    #++-
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (symbol)))

================================================================================
Quoted Symbol
================================================================================
test

    #'abc123'
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (symbol)))

================================================================================
Empty Symbol
================================================================================
test

    #''
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (symbol)))

================================================================================
Character
================================================================================
test

    $a
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (character)))

================================================================================
Space Character
================================================================================
test

    $ 
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (character)))

================================================================================
Dollar Character
================================================================================
test

    $$
--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (character)))

================================================================================
Return Character
================================================================================
test

    $

--------------------------------------------------------------------------------

(method
  (unary_selector
    (unary_identifier))
  (statement
    (character)))
